--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -5,8 +5,8 @@
 .input label {
     display: block;
     margin-bottom: 8px;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .input input {
@@ -17,4 +17,12 @@
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.input-color input {
+    height: 40px;
+    width: 40%;
+    padding: 5px 24px;;
 }
