--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -5,8 +5,8 @@
 .select label{
     display: block;
     margin-bottom: 8px;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .select select{
@@ -18,4 +18,6 @@
     padding: 24px;
     box-sizing: border-box;
     appearance: none;
+    font-size: 16px;
+    font-weight: 400;
 }
